<resources>
    <string name="app_name">Biljart app</string>
    <string name="home_title">Home</string>
    <string name="about_title">About</string>
    <string name="ranking_title">Ranking</string>
    <string name="playing_days_title">Playingdays</string>
    <string name="Ranking_player_id">Player ID: %1$s</string>
    <string name="Ranking_name">Name: %1$s</string>
    <string name="Ranking_rank">Rank: %1$s</string>
    <string name="Ranking_total_frames_won">Total frames won: %1$s</string>
    <string name="Ranking_total_frames_lost">Total frames lost: %1$s</string>
    <string name="Ranking_total_matches_won">Total matches won: %1$s</string>
    <string name="Ranking_total_matches_played">Total matches played: %1$s</string>
    <string name="Playingday_playing_day_id">Playing day ID: %1$s</string>
    <string name="Playingday_date">Date: %1$s</string>
    <string name="Playingday_is_finished">Is finished: %1$s</string>
    <string name="toggle_theme">Toggle theme</string>
    <string name="menu">Menu</string>
    <string name="loading_ranks">Loading ranks…</string>
    <string name="error_loading_ranks">Something went wrong when updating the data from the server…</string>
    <string name="no_rankings_available">No rankings available</string>
    <string name="nr">Nr.</string>
    <string name="player">Player</string>
    <string name="frames_won">Frames won</string>
    <string name="frames_lost">Frames lost</string>
    <string name="playingday_id">Playingday: %1$s</string>
    <string name="date">Date: %1$s</string>
    <string name="is_finished">Is finished?</string>
    <string name="finished">Finished</string>
    <string name="not_finished">Ongoing</string>
    <string name="player1_vs_player2_match_not_yet_played">%1$s vs %2$s\n(Match not yet played)</string>
    <string name="edit_match">Edit match</string>
    <string name="match">Match: %1$s</string>
    <string name="edit_match_scores">Edit match scores</string>
    <string name="edit_match_scores_with_matchId">Edit match %1$s scores</string>
    <string name="player_score">%1$s score</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit_playingday">Edit playingday</string>
    <string name="playingday_finished">Playingday finished</string>
    <string name="bottombar_home">Bottombar Home</string>
    <string name="bottombar_about">Bottombar About</string>
    <string name="bottombar_ranking">Bottombar Ranking</string>
    <string name="bottombar_playingdays">Bottombar Playingdays</string>
    <string name="logo">Logo</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="email_the_developer">Email the developer</string>
    <string name="developer">Developer:</string>
    <string name="dimitri_valckenier">Dimitri Valckenier</string>
    <string name="assignment">Assignment:</string>
    <string name="android_project">Android project (2023-2024)</string>
    <string name="additional_information">Additional information:</string>
    <string name="additional_information_text">This application is a part of the Android development course for the academic year 2023-2024. \nIt uses the REST API from billiard club \'De Scheve Stoot\'.</string>
    <string name="contact">Contact</string>
    <string name="use_the_email_icon_fab">Use the email icon in the bottom right corner to contact the developer.</string>
    <string name="view_details">View player details</string>
    <string name="ok">OK</string>
    <string name="player_details">"Player: %1$s"</string>
    <string name="frames_won_lost">Frames won: %1$s - Lost: %2$s</string>
    <string name="Player_id">Player ID</string>
    <string name="Rank">Rank</string>
    <string name="Total_frames_won">Total frames won</string>
    <string name="Total_frames_lost">Total frames lost</string>
    <string name="Total_matches_won">Total matches won</string>
    <string name="Total_matches_played">Total matches played</string>

</resources>